map issue fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Salads around</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <link ref="stylesheet" href="index.css">
+    <link href="index.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <p><button onclick="getLocation()">Show my location</button></p>
