--- a/index2.html
+++ b/index2.html
@@ -91,7 +91,7 @@
           // location: pyrmont,
           location: {lat: latitude, lng: longitude},
           radius: 500,
-          type: ['salad']
+          type: 'restaurant'
         }, callback);
       }
       function callback(results, status) {
