--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link href="index.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p><button onclick="getLocation()">Show my location</button></p>
-    <!-- <div class="loading-img"></div> -->
+    <div class="welcome_page">
+      <h1>Welcome to salads around</h1>
+      <h4>Where you can find nearby salads</h4>
+      <button id="get_location" onclick="getLocation()">Show my location</button>
+      <h4>Please allow us to obtain your location</h4>
+    </div>
     <div id="map"></div>
     <div class="salad_list"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
