--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="grid.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="welcome_page">
       <h1>Welcome to salads around</h1>
       <h4>Where you can find nearby salads</h4>
-      <button id="get_location" onclick="getLocation()">Show my location</button>
+      <button id="get_location">Share my location</button>
       <h4>Please allow us to obtain your location</h4>
     </div>
     <div id="map"></div>
