add some transition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <button id="get_location">Share my location</button>
       <h4>Please allow us to obtain your location</h4>
     </div>
-    <div id="map"></div>
+    <div id="map">
+    </div>
+    <div class="trans"></div>
     <div class="salad_list"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDQ7sLSCjnrRNWpM2jgBdUD8_TGZsTHfg&libraries=places&callback=initMap" async defer></script>
