--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="welcome_page">
       <h1>Welcome to salads around</h1>
       <h4>Where you can find nearby salads</h4>
+      <img src="asset/lettuce.jgp" alt="logo">
       <button id="get_location">Share my location</button>
       <h4>Please allow us to obtain your location</h4>
     </div>
