--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     <div class="welcome_page">
       <h1>Welcome to salads around</h1>
       <h4>Where you can find nearby salads</h4>
-      <img src="asset/lettuce.jgp" alt="logo">
       <button id="get_location">Share my location</button>
       <h4>Please allow us to obtain your location</h4>
-    </div>
-    <div id="map">
+      <span class="corner top_left"></span>
     </div>
     <div class="trans"></div>
     <div class="salad_list"></div>
+    <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDQ7sLSCjnrRNWpM2jgBdUD8_TGZsTHfg&libraries=places&callback=initMap" async defer></script>
     <script src="index.js"></script>
